force-app/main/default/objects/Account_Contracts_Pricing__c/Account_Contracts_Pricing__c.object-meta.xml
<CustomObject>
    <description>Contacts and Pricing records related to Account</description>
    <label>Account Contracts/Pricing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Contracts/Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>