force-app/main/default/objects/Account_Contracts_Pricing__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Contracts/Pricings</relationshipLabel>
    <relationshipName>Account_Contracts_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>