force-app/main/default/objects/Account_Contracts_Pricing__c/fields/Legal_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contract_Expiration_Date__c</fullName>
    <label>Legal Contract Expiration Date</label>
    <type>DateTime</type>
</CustomField>