force-app/main/default/objects/Account_Contracts_Pricing__c/fields/Legal_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contract_Type__c</fullName>
    <label>Legal Contract Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>