force-app/main/default/objects/Account_Contracts_Pricing__c/fields/Pricing_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Active_Date__c</fullName>
    <label>Pricing Active Date</label>
    <type>DateTime</type>
</CustomField>