force-app/main/default/objects/Account_Contracts_Pricing__c/fields/Pricing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Contract__c</fullName>
    <label>Pricing Contract</label>
    <type>TextArea</type>
</CustomField>