force-app/main/default/objects/Account_Contracts_Pricing__c/fields/Pricing_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Expiration_Date__c</fullName>
    <label>Pricing Expiration Date</label>
    <type>DateTime</type>
</CustomField>